# app_core

./: .gitignore  README.md
dart_core/: .metadata  CHANGELOG.md  README.md  analysis_options.yaml  ffigen.yaml  librust_core.d  librust_core.dylib  librust_core.rlib  pubspec.yaml
dart_core/android/: build.gradle
dart_core/ios/: app_core.podspec
dart_core/lib/: app_core.dart
dart_core/lib/src/: async_helper.dart  ffi_extensions.dart  isolate_helper.dart  memory.dart  platform_loader.dart
dart_core/linux/: CMakeLists.txt
dart_core/macos/: app_core.podspec
dart_core/src/: CMakeLists.txt  rust_core.c
dart_core/test/: app_core_test.dart
dart_core/windows/: CMakeLists.txt
docs/: CREATING_YOUR_OWN.md
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/kotlin/com/databytesoft/example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
rust_core/: Cargo.toml  bindings.h  build.rs  cbindgen.toml
rust_core/.cargo/: config.toml
rust_core/src/: lib.rs
rust_core/src/examples/: async_example.rs  basic.rs  blocking.rs  mod.rs
rust_core/src/ffi/: dart_port.rs  memory.rs  mod.rs  runtime.rs  types.rs
rust_core/tests/: integration_test.rs
scripts/: regen_bindings.sh  test_all.sh
