[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
once_cell = "1"
libc = "0.2"
irondash_dart_ffi = "0.2"
num_cpus = "1"

[build-dependencies]
cbindgen = "0.29"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
